<resources>
    <string name="app_name">Pokedex</string>

    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="settings_language">Language</string>
    <string name="settings_about">About</string>
    <string name="settings_about_text">Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna. Ut laoreet sodales nisi, quis iaculis nulla iaculis.</string>
    <string name="settings_more_info">MORE INFO</string>
    <string name="settings_clear">CLEAR MY FAVORITES LIST</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_activity_subtitle">SofaScore Android Academy</string>
    <string name="about_activity_class">Class 2021</string>
    <string name="about_activity_app_name_label">App Name</string>
    <string name="about_activity_app_name">Pokedex</string>
    <string name="about_activity_api_credit_label">API Credit</string>
    <string name="about_activity_api_credit">PokeApi</string>
    <string name="about_activity_developer_label">Developer</string>
    <string name="about_activity_developer">Miro Šarić</string>
    <string name="no_internet_message">Please check Internet connection.</string>
    <string name="no_favorites_message">Add some favorites to see them!</string>
    <string name="pokemon_height">HEIGHT</string>
    <string name="pokemon_weight">WEIGHT</string>
    <string name="pokemon_pokedex_num">POKEDEX NUM</string>
    <string name="pokemon_type">TYPE</string>
    <string name="stat_placeholder">Stat</string>

    <string name="stat_hp">HP:</string>
    <string name="stat_attack">Attack:</string>
    <string name="stat_defense">Defense:</string>
    <string name="stat_sp_atk">Sp. Atk:</string>
    <string name="stat_sp_def">Sp. Def:</string>
    <string name="stat_speed">Speed:</string>
    <string name="stat_total">Total:</string>
    <string name="abilities_label">Abilities</string>
    <string name="stats_label">Stats</string>
    <string name="hidden_ability">Hidden Ability</string>
    <string name="type_button_placeholder">TYPE</string>

    <string name="title_activity_pokemon_type">PokemonTypeActivity</string>
    <string name="tab_text_1">DAMAGE OVERVIEW</string>
    <string name="tab_text_2">MOVES</string>
    <string name="tab_text_3">POKEMONS</string>
    <string name="gen_value_placeholder">I</string>
    <string name="move_value_placeholder">BLOOM DOOM</string>
    <string name="category_value_placeholder">Physical</string>
    <string name="power_value_placeholder">40</string>
    <string name="pp_value_placeholder">25</string>
    <string name="offensive_label">Offensive</string>
    <string name="power_label">POWER</string>
    <string name="types_label">TYPES</string>
    <string name="double_damage">2x</string>
    <string name="half_damage">1/2x</string>
    <string name="no_damage">0x</string>
    <string name="defensive_label">Defensive</string>
    <string name="pokedex_num_placeholder">010</string>
    <string name="evolution_label">Evolution</string>
    <string name="gen_label">GEN</string>
    <string name="move_label">MOVE</string>
    <string name="category_label">CATEGORY</string>
    <string name="pp_label">PP</string>

</resources>