<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextView
        android:id="@+id/gen_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/move_value"
        android:padding="8dp"
        android:text="@string/gen_value_placeholder"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/move_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/gen_value"
        app:layout_constraintEnd_toStartOf="@id/category_value"
        android:padding="8dp"
        android:text="@string/move_value_placeholder"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/category_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/move_value"
        app:layout_constraintEnd_toStartOf="@id/power_value"
        android:padding="8dp"
        android:text="@string/category_value_placeholder"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/power_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/category_value"
        app:layout_constraintEnd_toStartOf="@id/pp_value"
        android:padding="8dp"
        android:text="@string/power_value_placeholder"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/pp_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/power_value"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"
        android:text="@string/pp_value_placeholder"
        android:textSize="16sp"
        android:background="@color/darkAlpha"
        />

</androidx.constraintlayout.widget.ConstraintLayout>