<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/surface1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".mainactivityfragments.settings.AboutActivity"
    android:paddingHorizontal="16dp">


        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_arrow_back"
            android:layout_marginVertical="20dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            />

        <TextView
            android:id="@+id/about_activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/settings_about"
            android:textColor="@color/dark"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginTop="28dp"
            />

        <TextView
            android:id="@+id/about_activity_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/about_activity_title"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/about_activity_subtitle"
            android:textColor="@color/dark"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="48dp"
            />

        <TextView
            android:id="@+id/about_activity_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/about_activity_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/about_activity_class"
            android:textColor="@color/dark"
            android:textSize="16sp"
            android:layout_marginTop="4dp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/about_activity_logos_container"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintTop_toBottomOf="@id/about_activity_class"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:background="@drawable/about_logos_container"
            >

                <ImageView
                    android:id="@+id/logo_sofascore"
                    android:layout_width="107dp"
                    android:layout_height="18dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_logo_sofascore_lettering"
                    android:layout_marginVertical="31dp"
                    android:layout_marginStart="29dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    />

                <ImageView
                    android:id="@+id/logo_android"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_logo_android"
                    android:layout_marginVertical="16dp"
                    android:layout_marginEnd="58dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/about_activity_app_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/about_activity_logos_container"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/about_activity_app_name_label"
            android:textColor="@color/coldGray"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="36dp"
            />
        <TextView
            android:id="@+id/about_activity_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/about_activity_app_name_label"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/about_activity_app_name"
            android:textColor="@color/dark"
            android:textSize="16sp"
            android:layout_marginTop="4dp"
            />
        <TextView
            android:id="@+id/about_activity_api_credit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/about_activity_app_name"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/about_activity_api_credit_label"
            android:textColor="@color/coldGray"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            />
        <TextView
            android:id="@+id/about_activity_api_credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/about_activity_api_credit_label"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/about_activity_api_credit"
            android:textColor="@color/dark"
            android:textSize="16sp"
            android:layout_marginTop="4dp"
            />
        <TextView
            android:id="@+id/about_activity_developer_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/about_activity_api_credit"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/about_activity_developer_label"
            android:textColor="@color/coldGray"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            />
        <TextView
            android:id="@+id/about_activity_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/about_activity_developer_label"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/about_activity_developer"
            android:textColor="@color/dark"
            android:textSize="16sp"
            android:layout_marginTop="4dp"
            />


</androidx.constraintlayout.widget.ConstraintLayout>