<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.favorites.FavoritePokemonsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"
        android:background="@color/tintPrimary">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/favorites_title"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:text="@string/favorites"
                android:textColor="@color/surface1"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="8dp"
                />


            <ImageView
                android:id="@+id/edit_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_edit"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="12dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="80dp"
                android:id="@+id/favorites_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/favorites_no_internet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@color/error"
        android:text="@string/no_internet_message"
        android:gravity="center"
        />

    <RelativeLayout
        android:id="@+id/favorites_placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="visible">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:text="@string/no_favorites_message"
            android:textColor="@color/dark"
            android:gravity="center"
        />


    </RelativeLayout>

</FrameLayout>